# nimShot-app

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.agent/tasks/: fix_drag_and_drop.md
.github/workflows/: release.yml
Docs/: Tauri.txt  color-palette.md  implementation-plan.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: capture.rs  mod.rs  screenshots.rs
src-tauri/src/models/: mod.rs  screenshot.rs  settings.rs
src/components/capture/: CaptureOverlay.tsx
src/components/gallery/: GalleryView.tsx
src/components/settings/: SettingsPage.tsx  Toggle.tsx
src/components/widget/: FloatingWidget.tsx  PopupPanel.tsx
src/lib/: tauri-commands.ts  updater.ts
src/styles/: globals.css
