[package]
name = "nimshot"
version = "0.1.0"
description = "nimShot - Screenshot tool for Windows"
authors = ["nimShot"]
edition = "2021"

[lib]
name = "nimshot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-http = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = "0.0.14"
image = "0.25"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
base64 = "0.22"
dirs = "6"
tauri-plugin-drag = "2.1.0"

[target.'cfg(windows)'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"

